--- a/style.css
+++ b/style.css
@@ -2,15 +2,59 @@
 font-family: 'Poppins', sans-serif;
 font-family: 'Roboto', sans-serif;
 */
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --head-font-family: "Roboto", sans-serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+body {
+  font-family: var(--default-font-family);
+}
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: var(--head-font-family);
+}
 h1 {
-  color: blueviolet;
+  font-size: 96px;
 }
 
-.pop {
+p {
+  font-weight: normal;
+}
+
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-weight: bold;
+  font-size: 36px;
+  margin: 0;
+  color: #272142;
+}
+
+.hero h2 {
+  font-size: 24px;
   font-family: "Poppins", sans-serif;
+  line-height: 2;
+  font-weight: normal;
+  color: #272142;
 }
 
-.robt {
-  font-family: "Roboto", sans-serif;
+.btn-branding {
+  background-color: var(--branding-color);
+  color: white;
+  font-size: 18px;
+  border-radius: 4px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
