--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: 'Roboto', sans-serif;
 :root {
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
-  --head-font-family: "Roboto", sans-serif;
+  --head-font-family: 'Playfair Display', serif;
   --default-font-family: "Poppins", sans-serif;
 }
 body {
@@ -82,6 +82,30 @@ h2 {
   text-align: justify;
 }
 
+
+ /*about page*/
+
+ .about-section{
+  padding: 160px 20px;
+ }
+
+ .about-section-content{
+  padding: 30px;
+ }
+.about-section h1 {
+  font-size: 63px;
+  line-height: 1;
+}
+.about-section p {
+  font-size: 16px;
+  line-height: 2;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 30px 0;
+}
+
 @media (max-width: 900px) {
   .project-description {
     text-align: center;
@@ -89,13 +113,16 @@ h2 {
   }
   h1 {
     font-size: 44px;
-    line-height: 2;
+    line-height: 56px;
   }
   h2 {
     font-size: 44px;
   }
   .hero {
-
     padding: 80px 20px;
+  }
+  .about-section{
+    text-align: center;
+    padding: 0;
   }
 }
