--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: 'Roboto', sans-serif;
 :root {
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
-  --head-font-family: 'Playfair Display', serif;
+  --head-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
 body {
@@ -82,16 +82,15 @@ h2 {
   text-align: justify;
 }
 
+/*about page*/
 
- /*about page*/
-
- .about-section{
+.about-section {
   padding: 160px 20px;
- }
+}
 
- .about-section-content{
+.about-section-content {
   padding: 30px;
- }
+}
 .about-section h1 {
   font-size: 63px;
   line-height: 1;
@@ -121,7 +120,7 @@ h2 {
   .hero {
     padding: 80px 20px;
   }
-  .about-section{
+  .about-section {
     text-align: center;
     padding: 0;
   }
