--- a/style.css
+++ b/style.css
@@ -112,6 +112,15 @@ h2 {
   font-family: var(--default-font-family);
 }
 
+.content a{
+  text-decoration: none;
+  color: var(--branding-color);
+}
+.content a:hover{
+  text-decoration: underline;
+  color: var(--branding-color);
+}
+
 .content p {
   font-size: 14px;
 }
