--- a/style.css
+++ b/style.css
@@ -36,8 +36,18 @@ h2 {
   font-size: 64px;
 }
 
-.navbar {
-  background-color: white;
+
+
+.navbar .navbar-nav .nav-link {
+  color: black;
+  opacity: 0.7;
+  font-size: 1.1em;
+}
+
+
+.navbar .navbar-nav .nav-link:hover, .navbar .navbar-nav .nav-link.active{
+  color: var(--branding-color);
+  opacity: 1;
 }
 
 .logo,
