--- a/style.css
+++ b/style.css
@@ -36,16 +36,14 @@ h2 {
   font-size: 64px;
 }
 
-
-
 .navbar .navbar-nav .nav-link {
   color: black;
   opacity: 0.7;
   font-size: 1.1em;
 }
 
-
-.navbar .navbar-nav .nav-link:hover, .navbar .navbar-nav .nav-link.active{
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link.active {
   color: var(--branding-color);
   opacity: 1;
 }
@@ -147,6 +145,52 @@ h2 {
   font-size: 14px;
 }
 
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+footer h4 {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  text-align: center;
+}
+
+footer .email-link:hover {
+  text-decoration: underline;
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 10px 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 150ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+}
+
 @media (max-width: 900px) {
   .project-description {
     text-align: center;
@@ -165,5 +209,17 @@ h2 {
   .content-container {
     text-align: center;
     padding: 0;
+  }
+
+  footer .contact-box {
+    padding: 5px;
+  }
+
+  footer h4 {
+    font-size: 25px;
+  }
+  footer .contact-box p {
+   font-size: 12px;
+   line-height: 1;
   }
 }
